Improve buttons logic.

--- a/programacion-web/nov2024-galeria/index.html
+++ b/programacion-web/nov2024-galeria/index.html
@@ -15,14 +15,32 @@
 
   <main>
     <section class="gallery">
+      <div class="gallery__controls">
+        <button class="js__prevBtn btn" title="Foto anterior"> &lt; </button>
+        <button class="js__nextBtn btn" title="Foto siguiente"> &gt; </button>
+      </div>
       <ul class="gallery__list">
-        <li>
-          <img src="./images/cat.webp" alt="Gato con cara de pensativo apoyando el hocico en una mesa sobre un fondo amarillo" title="Gato pensativo">
+        <li class="js__photo gallery__photoitem">
+          <img src="./images/cat1.webp" alt="Gato con cara de pensativo apoyando el hocico en una mesa sobre un fondo amarillo" title="Gato pensativo">
+        </li>
+        <li class="js__photo gallery__photoitem ">
+          <img src="./images/cat2.webp" alt="Gato atento" title="Gato atento">
+        </li>
+        <li class="js__photo gallery__photoitem spotlight">
+          <img src="./images/cat3.webp" alt="Gato atento" title="Gato atento">
+        </li>
+        <li class="js__photo gallery__photoitem ">
+          <img src="./images/cat4.webp" alt="Gato atento" title="Gato atento">
+        </li>
+        <li class="js__photo gallery__photoitem">
+          <img src="./images/cat5.webp" alt="Gato atento" title="Gato atento">
         </li>
       </ul>
       
     </section>
     
   </main>
+
+  <script src="./js/main.js"></script>
 </body>
 </html>
