--- a/programacion-web/nov2024-galeria/index.html
+++ b/programacion-web/nov2024-galeria/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <header class="header">
+    <div class="header__logo">Adalab</div>
     <h1 class="header__title">Gallery</h1>
   </header>
 
